Add known erroneous shaded imports to forbidden api (#15498)
Add a list of known imports from shaded or other "known to be wrong"
imports to our forbidden-apis check.

* Fix a few wrong Strings imports
* Use javax instead of guice Inject annotation
  The guice one does not work with HK2